[package]
name = "apint"
version = "0.2.0" # Don't forget to update html_root_url in lib.rs.
authors = ["Robin Freyler <robbepop@web.de>", "Aaron Kutch <aaronkutch@att.net>"]
license = "MIT/Apache-2.0"
readme  = "README.md"
edition = "2018"

keywords   = ["int", "integer", "precision", "arbitrary"]

repository = "https://github.com/robbepop/apint"
documentation = "https://docs.rs/apint"
description = """Arbitrary precision integers library."""
categories = ["data-structures"]

[dependencies]
smallvec = { version = "0.6", default-features = false }
rand = { version = "0.5.5", default-features = false, optional = true }
specialized-div-rem = { version = "0.0.5", optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
# Currently needed because of: https://github.com/rust-lang/rfcs/issues/2505
libm = { version = "0.1", default-features = false }

[dev-dependencies]
serde_test = "1.0"
itertools = "0.8"

[features]
default = ["rand_support", "serde_support", "specialized-div-rem", "std"]
std = [
    "smallvec/std",
    "rand/std",
    "serde/std",
]
rand_support = ["rand"]
serde_support = ["serde"]

[badges]
travis-ci = { repository = "Robbepop/apint" }
appveyor = { repository = "Robbepop/apint", branch = "master", service = "github" }
