[package]
name = "apint"
version = "0.2.0" # Don't forget to update html_root_url in lib.rs.
authors = ["Robin Freyler <robbepop@web.de>", "Aaron Kutch <aaronkutch@att.net>"]
license = "MIT/Apache-2.0"
readme  = "README.md"
edition = "2018"

keywords   = ["int", "integer", "precision", "arbitrary"]

repository = "https://github.com/robbepop/apint"
documentation = "https://docs.rs/apint"
description = """Arbitrary precision integers library."""
categories = ["data-structures"]

[dependencies]
smallvec = { version = "0.6", default-features = false }
specialized-div-rem = { version = "0.0.5", optional = true }
rand = { version = "0.7", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
serde_test = "1.0"
itertools = "0.8"
rand_xorshift = "0.2"

[features]
default = [
    "rand_support",
    "serde_support",
    "specialized-div-rem",
    "std",
]
std = [
    "smallvec/std",
    "rand/std",
    "serde/std",
]
rand_support = [
    "rand",
    "rand/small_rng",
    "rand/getrandom",
]
serde_support = ["serde"]

[badges]
travis-ci = { repository = "Robbepop/apint" }
appveyor = { repository = "Robbepop/apint", branch = "master", service = "github" }
